--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -29,7 +29,10 @@ body {
 }
 #site_div {
     display: none;
-    background-image:linear-gradient(black,white);
+    background-image:linear-gradient(white,black);
+    width: 100%;
+    height:100%;
+
 }
 
 #displayusername {
