--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -29,7 +29,7 @@ body {
 }
 #site_div {
     display: none;
-    background-image:linear-gradient(white,red,black);
+    background-image:linear-gradient(black,#C54A3A,white);
     width: 100%;
     height:100%;
 
