--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -35,6 +35,10 @@ body {
   width: 20px;
   height: 20px;
 }
+.name_status_img {
+  width: 40px;
+  height: 40px;
+}
 #site_div {
 
       display: none;
