--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -31,11 +31,11 @@ body {
   padding-left: 50%;
 }
 
-.name_status_img {
+.signup_login_img {
   width: 20px;
   height: 20px;
 }
-.name_status_img {
+.signup_login_img {
   width: 40px;
   height: 40px;
 }
