push the buttons to the center

--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -31,6 +31,10 @@ body {
   padding-left: 50%;
 }
 
+#login_buttons {
+  padding-left: 45%;
+}
+
 .name_status_img {
   width: 20px;
   height: 20px;
