--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -33,6 +33,7 @@ body {
 
 #login_buttons {
   padding-left: 45%;
+  cursor:pointer;
 }
 
 .name_status_img {
@@ -40,8 +41,8 @@ body {
   height: 20px;
 }
 .signup_login_img {
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
 }
 #site_div {
 
