--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -35,10 +35,10 @@ body {
   padding-left: 45%;
   cursor:pointer;
 }
-#login_button {
+.login_button {
   font-color: black;
 }
-#login_button:hover {
+.login_button:hover {
   text-shadow: 2px 2px black;
   font-color: white;
 }
