--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -36,11 +36,13 @@ body {
   cursor:pointer;
 }
 .login_button {
-  font-color: black;
+  color: black;
 }
 .login_button:hover {
   text-shadow: 2px 2px black;
-  font-color: white;
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .name_status_img {
