--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -16,12 +16,14 @@ body {
 #popup {
   background: #bbb4aa;
   margin: 0;
-  padding: 1em 1em 1em 1em;
+  padding: 2em 2em 2em 2em;
   position: absolute;
-  top: 40%;
+  top: 30%;
+  left: 10%;
   width: 100%;
   overflow: auto;
   display: block;
+  box-shadow: 7px 7px;
 }
 
 #login_user_div {
@@ -36,6 +38,7 @@ body {
 }
 .login_button {
   color: black;
+  background: #b24327;
   cursor:pointer;
 }
 .login_button:hover {
@@ -71,6 +74,8 @@ body {
   top:1em;
   width: 70%;
   padding: 2em 2em 2em 2em;
+  
+  box-shadow: 5px 5px;
 }
 
 #nav_bar {
@@ -93,6 +98,8 @@ body {
   width: 8em;
   overflow: auto;
   font-size: 24px;
+
+  box-shadow: 5px 5px;
 }
 .functional_btn:hover {
   text-shadow: 2px 2px white;
