--- a/src/www/styles.css
+++ b/src/www/styles.css
@@ -23,7 +23,7 @@ body {
   width: 100%;
   overflow: auto;
   display: block;
-  box-shadow: 7px 7px;
+  box-shadow: -7px 7px;
 }
 
 #login_user_div {
@@ -39,6 +39,7 @@ body {
 .login_button {
   color: black;
   background: #b24327;
+  padding: 0.5em 0.5em 0.5em 0.5em;
   cursor:pointer;
 }
 .login_button:hover {
@@ -74,8 +75,8 @@ body {
   top:1em;
   width: 70%;
   padding: 2em 2em 2em 2em;
-  
-  box-shadow: 5px 5px;
+
+  box-shadow: -5px 5px;
 }
 
 #nav_bar {
@@ -99,13 +100,15 @@ body {
   overflow: auto;
   font-size: 24px;
 
-  box-shadow: 5px 5px;
+  box-shadow: -5px 5px black;
 }
 .functional_btn:hover {
   text-shadow: 2px 2px white;
   color: black;
   font-weight: bold;
   text-decoration: underline;
+
+  box-shadow: -4px 4px white;
 }
 
 
